Adiciona pequena correção

--- a/ExemploEntityFramework/App.config
+++ b/ExemploEntityFramework/App.config
@@ -6,11 +6,13 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
+	
 	<connectionStrings>
 		<add name="exemplo"
 			 providerName="Npgsql"
-			 connectionString="server=localhost; port:5432; database=exemplo; user id=postgres; password=admin"/>
+			 connectionString="server=localhost; port=5432; database=exemplo; user id=postgres; password=admin"/>
 	</connectionStrings>
+	
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
